2009-05-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger\ThreadsPad.cs: Don't try to get the
	  list of threads if the debugger is running.

	* MonoDevelop.Debugger\DebugCommands.cs: Fix logic for
	  checking if debugging is supported.

2009-05-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger\ThreadsPad.cs:
	* MonoDevelop.Debugger\StackTracePad.cs: Don't render a
	  border. The dock item already provides one.

2009-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger\Initializer.cs:
	* MonoDevelop.Debugger\DebuggingService.cs: Use FilePath for
	  representing paths.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger/Extensions.cs:
	* MonoDevelop.Debugger/DebugCommands.cs: Workaround for what
	  seems to be a mcs bug. Looks like it can't properly resolve
	  the implicit conversion of null to string.

2009-05-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Debugger.addin.xml: More Mac shortcuts.

2009-04-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Debugger.csproj:
	* MonoDevelop.Debugger/IDebuggerEngine.cs: Moved
	  IDebuggerEngine from Mono.Debugging.

	* MonoDevelop.Debugger/DebuggingService.cs: IDebuggerEngine
	  now takes an ExecutionCommand as parameter.

2009-04-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Debugger.csproj:
	* MonoDevelop.Debugger.addin.xml:
	* MonoDevelop.Debugger/DebugExecutionModeSet.cs: Created an
	  execution mode set for debuggers.

	* MonoDevelop.Debugger/DebuggingService.cs:
	* MonoDevelop.Debugger/DebugExecutionHandlerFactory.cs: Track
	  api changes done in IExecutionHandler.

2009-04-17  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.Debugger.csproj: don't require specific
	gtk-sharp version.

2009-04-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Debugger/WatchPad.cs: Changed IMementoCapable
	  interface.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>
